add in the UI for the KineticReactor

--- a/futuregen/Plugin/Makefile.all
+++ b/futuregen/Plugin/Makefile.all
@@ -41,14 +41,18 @@ OBJ21 = Gasifier/Gasifier.o Gasifier/Gasifier_UI.o
 OBJ22 = GasSource/GasSource.o GasSource/GasSource_UI.o \
 	GasSource/thermo.o GasSource/matrix.o
 OBJ23 = GasSplitter/GasSplitter.o GasSplitter/GasSplitter_UI.o 
-
-
+OBJ24 = GasMixer/GasMixer.o 
+OBJ25 = GasSeparator/GasSeparator.o GasSeparator/GasSeparator_UI.o GasSeoarator/thermo.o GasSeparator/matrix.o
+OBJ26 = GasHeatExchanger/GasHeatExchanger.o GasHeatExchanger/GasHeatExchanger_UI.o 
+OBJ27 = KineticReactor/KineticReactor.o KineticReactor/KinecticReactor_UI.o
+OBJ28 = EuilibriumReactor/EuilibriumReactor.o
+OBJ29 = WaterSource/WaterSource.o WaterSource/WaterSource_UI.o
 .SUFFIXES : .o .cpp
 
 .cpp.o :
 	$(CXX) -g -c ${INCLUDES} ${CMP} ${WX_FLAGS} -D WXUSING_PLUGIN_DLL -o $@ $<
 
-all: s1 s2 s3 s4 s5 s6 s7 s8 s9 s10 s11 s12 s13 s14 s15 s16 s17 s18 s19 s20 s21 s22 s23
+all: s1 s2 s3 s4 s5 s6 s7 s8 s9 s10 s11 s12 s13 s14 s15 s16 s17 s18 s19 s20 s21 s22 s23 s24
 
 s1:	$(OBJ1)
 	$(CXX) -g -shared -o libBulkDesulfurizer.so $(OBJ1)
@@ -119,9 +123,23 @@ s22:	$(OBJ22)
 s23:	$(OBJ23)
 	$(CXX) -g -shared -o libGasSplitter.so $(OBJ23)
 
+s24:	$(OBJ24)
+	$(CXX) -g -shared -o libGasMixer.so $(OBJ24)
+s25:	$(OBJ25)
+	$(CXX) -g -shared -o libGasSeparator.so $(OBJ25)
+s26:	$(OBJ26)
+	$(CXX) -g -shared -o libGasHeatExchanger.so $(OBJ26)
+s27:	$(OBJ27)
+	$(CXX) -g -shared -o libKineticReactor.so $(OBJ27)
+s28:	$(OBJ28)
+	$(CXX) -g -shared -o libEuilibriumReactor.so $(OBJ28)
+s29:	$(OBJ29)
+	$(CXX) -g -shared -o libWaterSource.so $(OBJ29)
+
 clean:
 	rm -rf *.o $(PLUGIN) $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) \
 	$(OBJ5) $(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) \
 	$(OBJ12) $(OBJ13) $(OBJ14) $(OBJ15) $(OBJ16) $(OBJ17) $(OBJ18) \
-	$(OBJ19) $(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23)
+	$(OBJ19) $(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23) $(OBJ24) $(OBJ25) \
+	$(OBJ26) $(OBJ27) $(OBJ28) $(OBJ29)  
 
