cfdcommandarray development version for doug and gerrick

--- a/VE_Conductor/Makefile
+++ b/VE_Conductor/Makefile
@@ -1,6 +1,13 @@
 #__________________________________________________________
 # MAKEFILE
 #__________________________________________________________
+#
+#_______________________________CUSTOM OPTIONS__________________________________
+#
+# Uncomment the following line to use CFDCOMMANDARRAY.
+#EXTRA_CXXFLAGS+= -D_CFDCOMMANDARRAY
+#_______________________________________________________________________________
+#
 
 LIBS=   $(LIBS_BEGIN) $(SYS_LIBS) $(LIBS_END)
 
