--- a/VE_Builder/Preprocessor/Makefile
+++ b/VE_Builder/Preprocessor/Makefile
@@ -28,8 +28,9 @@ EXTRA_CXXFLAGS+=
 EXTRA_DEFS+=
 #_MPI for HPC build
 #SJK_TEST produces ascii output
-EXTRA_INCLUDES+=	-I${VE_SUITE_HOME}/VE_Xplorer \
-                  -I$(VE_SUITE_HOME)/VE_Builder/Utilities
+EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer \
+                 -I$(VE_SUITE_HOME)/VE_Builder/Utilities\
+		            -I$(BOOST_INCLUDES)/include
 
 #EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG
 #EXTRA_OPTIM_FLAGS+=	-O2 -OPT:Olimit=0 -D_OPT
