--- a/VE_Builder/Translator/Makefile
+++ b/VE_Builder/Translator/Makefile
@@ -6,7 +6,7 @@ all:
 	$(MAKE) $(APP_NAME)
 #	-$(MAKE) install
 
-srcdir=		.
+srcdir= .
 
 SRCS=\
    translateToVtk.cpp \
@@ -30,30 +30,31 @@ SRCS=\
    jdMAPReader.cpp
 #   vtkEnSightFortranBinaryReader.cxx \
 
-OBJDIR=	$(CFDHOSTTYPE)
-DEPDIR=	$(CFDHOSTTYPE)
+OBJDIR= $(CFDHOSTTYPE)
+DEPDIR= $(CFDHOSTTYPE)
 NO_DEPEND= YES
 # One of these must be uncommented.
-DEBUG_APP?=		TRUE
-#OPTIM_APP?=		TRUE
+DEBUG_APP?= TRUE
+#OPTIM_APP?= TRUE
 
-EXTRA_CFLAGS+=		 
+EXTRA_CFLAGS+= 
 #EXTRA_CXXFLAGS+= -DSJK_TEST
 EXTRA_DEFS+=
-EXTRA_INCLUDES+=	-I${VE_SUITE_HOME}/VE_Xplorer
 
-#EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG
-#EXTRA_OPTIM_FLAGS+=	-O2 -OPT:Olimit=0 -D_OPT
+EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer
 
-LINKALL_ON=		-all
-LINKALL_OFF=		
+#EXTRA_DEBUG_FLAGS+= -g -D_DEBUG
+#EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 
-STATIC_ON=		@APP_LINK_STATIC_ON@
-STATIC_OFF=		@APP_LINK_STATIC_OFF@
+LINKALL_ON= -all
+LINKALL_OFF=
+
+STATIC_ON= @APP_LINK_STATIC_ON@
+STATIC_OFF= @APP_LINK_STATIC_OFF@
 
 EXTRA_LIBS+= -lm
 
-#include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
+#vrj.appdefs.mk includes $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
 include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 
