Makefile cleanup and comments

--- a/VE_Builder/Utilities/mk/appendVTK/Makefile
+++ b/VE_Builder/Utilities/mk/appendVTK/Makefile
@@ -1,3 +1,4 @@
+# Create the OS-dependent directory name
 APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/appendVTK
 
 all:
@@ -5,39 +6,46 @@ all:
 	$(MAKE) $(APP_NAME)
 #	-$(MAKE) install
 
-srcdir=		../../
+srcdir= ../../
 
 SRCS=\
    fileIO.cxx \
    readWriteVtkThings.cxx \
    appendVTK.cpp
 
+# Specify the OS-dependent directory name for object files and depends
 OBJDIR=../../$(CFDHOSTTYPE)
 DEPDIR=../../$(CFDHOSTTYPE)
+
 NO_DEPEND= YES
+
 # One of these must be uncommented.
-DEBUG_APP?=		TRUE
-#OPTIM_APP?=		TRUE
+DEBUG_APP?= TRUE
+#OPTIM_APP?= TRUE
 
-EXTRA_CFLAGS+=		 
-EXTRA_CXXFLAGS+= 
+EXTRA_CFLAGS+=  
+
+EXTRA_CXXFLAGS+=
+
 EXTRA_DEFS+=
-#SJK_TEST
-EXTRA_INCLUDES+=	-I${VE_SUITE_HOME}/VE_Xplorer \
-                  -I$(VE_SUITE_HOME)/VE_Builder/Translator
 
-#EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG
-#EXTRA_OPTIM_FLAGS+=	-O2 -OPT:Olimit=0 -D_OPT
+EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer \
+                 -I$(VE_SUITE_HOME)/VE_Builder/Translator
 
-LINKALL_ON=		-all
-LINKALL_OFF=		
+#EXTRA_DEBUG_FLAGS+= -g -D_DEBUG
+#EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 
-STATIC_ON=		@APP_LINK_STATIC_ON@
-STATIC_OFF=		@APP_LINK_STATIC_OFF@
+LINKALL_ON= -all
+LINKALL_OFF= 
+
+STATIC_ON= @APP_LINK_STATIC_ON@
+STATIC_OFF= @APP_LINK_STATIC_OFF@
 
 EXTRA_LIBS+=
 
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
+
+#add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
 include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
