--- a/VE_Builder/Utilities/mk/whatIsScalarRange/Makefile
+++ b/VE_Builder/Utilities/mk/whatIsScalarRange/Makefile
@@ -1,3 +1,4 @@
+# Create the OS-dependent directory name
 APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/whatIsScalarRange
 
 all:
@@ -12,17 +13,22 @@ SRCS=\
    cfdAccessoryFunctions.cxx \
    whatIsScalarRange.cpp 
 
+# Specify the OS-dependent directory name for object files and depends
 OBJDIR=../../$(CFDHOSTTYPE)
 DEPDIR=../../$(CFDHOSTTYPE)
+
 NO_DEPEND= YES
+
 # One of these must be uncommented.
 DEBUG_APP?=		TRUE
 #OPTIM_APP?=		TRUE
 
-EXTRA_CFLAGS+=		 
-EXTRA_CXXFLAGS+= 
+EXTRA_CFLAGS+=
+
+EXTRA_CXXFLAGS+=
+
 EXTRA_DEFS+=
-#SJK_TEST
+
 EXTRA_INCLUDES+=	-I${VE_SUITE_HOME}/VE_Xplorer \
                   -I$(VE_SUITE_HOME)/VE_Builder/Translator
 
@@ -38,6 +44,8 @@ STATIC_OFF=		@APP_LINK_STATIC_OFF@
 EXTRA_LIBS+=
 
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
+
+#add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
 include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
