--- a/VE_Builder/WX_Translator/Makefile
+++ b/VE_Builder/WX_Translator/Makefile
@@ -1,18 +1,16 @@
 # this Makefile requires gmake
 
+# Create the OS-dependent directory name
+APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/cfdtrans
+
 # store some wxWidgets information
 CXX = $(shell wx-config --cxx)
 WX_CXX = $(shell wx-config --cxxflags)
 WX_LIB = $(shell wx-config --libs)
 
-APP_NAME= cfdtrans
-
 all:
 	$(MAKE) NO_DEPEND=0 cxx
 	$(MAKE) $(APP_NAME)
-
-#add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
-include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 
 srcdir= .
 
@@ -28,13 +26,16 @@ OBJDIR= $(CFDHOSTTYPE)
 DEPDIR= $(CFDHOSTTYPE)
 
 NO_DEPEND= YES
+
 # One of these must be uncommented.
 #DEBUG_APP?=TRUE
 OPTIM_APP?=TRUE
 
-EXTRA_CFLAGS+=  
+EXTRA_CFLAGS+=
 EXTRA_CXXFLAGS+= ${WX_CXX}
+
 EXTRA_DEFS+=
+
 #EXTRA_DEBUG_FLAGS+= -g -D_DEBUG
 #EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 
@@ -45,7 +46,10 @@ STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
 include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
+
+#add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
 include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
+
 EXTRA_LIBS+= -lm ${WX_LIB}
 
 help:
