--- a/futuregen/Unit/DumpCombustorUnit/Makefile
+++ b/futuregen/Unit/DumpCombustorUnit/Makefile
@@ -4,6 +4,7 @@ COMPILER = g++
 GCC = yes
 GXX = yes
 F77 = g77
+C = gcc
 CXXFLAGS =   -g -w -O  -DAPP_NO_THREADS -DXML_USE_NO_THREADS  
 CFLAGS =   -g -w -O  -DAPP_NO_THREADS -DXML_USE_NO_THREADS  
 
@@ -91,13 +92,16 @@ OBJECTS = ../string_ops.o				\
 	../ThirdParty/Cvode/nvector.o			\
 	../ThirdParty/Cvode/spgmr.o		
 
-.SUFFIXES : .o .cpp .cc	
+.SUFFIXES : .o .cpp .cc	.f .c
 
 .cpp.o :
 	$(CXX) -g -c $(CPPFLAGS) -w -o $@ $<
 
 .cc.o :
 	$(CXX) -g -c $(CPPFLAGS) -w -o $@ $<
+
+.c.o :
+	$(C) -g -c -w -o $@ $<
 
 .f.o : 
 	$(F77) -g -c -w -o $@ $<
