--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -31,11 +31,11 @@
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
 DIRS= ${VE_SUITE_HOME}/VE_Builder/Translator \
-      ${VE_SUITE_HOME}/VE_Builder/WX_Translator \
       ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
       ${VE_SUITE_HOME}/VE_Builder/Utilities \
       ${VE_SUITE_HOME}/VE_Conductor \
       ${VE_SUITE_HOME}/VE_Xplorer
+#      ${VE_SUITE_HOME}/VE_Builder/WX_Translator
 
 # -----------------------------------------------------------------------------
 # Build targets.
@@ -45,10 +45,10 @@ default: all
 all: $(DIRS)
 
 ${VE_SUITE_HOME}/VE_Builder/Translator \
-${VE_SUITE_HOME}/VE_Builder/WX_Translator \
 ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
 ${VE_SUITE_HOME}/VE_Xplorer::
 	cd $@ && $(MAKE) -j
+#${VE_SUITE_HOME}/VE_Builder/WX_Translator
 
 ${VE_SUITE_HOME}/VE_Conductor \
 ${VE_SUITE_HOME}/VE_Builder/Utilities::
