--- a/VE_Builder/Utilities/gui/Makefile
+++ b/VE_Builder/Utilities/gui/Makefile
@@ -13,7 +13,8 @@ srcdir= .
 
 SRCS=\
 toolBarApp.cpp \
-readWriteVtkThings.cxx
+readWriteVtkThings.cxx\
+cfdGrid2Surface.cpp
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR= $(CFDHOSTTYPE)
 DEPDIR= $(CFDHOSTTYPE)
@@ -30,7 +31,7 @@ EXTRA_CXXFLAGS+=${WX_CXX} -DVTK_USE_ANSI_STDLIB
 
 #EXTRA_DEFS+= -DSJK_TEST
 
-EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer 
+EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer -I${VE_SUITE_HOME}/VE_Builder/Translator
 
 #EXTRA_DEBUG_FLAGS+= -g -D_DEBUG
 #EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
@@ -51,7 +52,8 @@ include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer
 vpath %.h    $(VE_SUITE_HOME)/VE_Xplorer
-
+vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Translator
+vpath %.h    $(VE_SUITE_HOME)/VE_Builder/Translator
 # -----------------------------------------------------------------------------
 # Application build targets.
 # -----------------------------------------------------------------------------
